--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     }
   },
   "types": "src/openmrs-esm-devtools.tsx",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/openmrs/openmrs-esm-devtools.git"
+  },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
@@ -32,7 +36,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@openmrs/esm-api": "1.0.3",
+    "@openmrs/esm-api": "^1.2.2",
     "@openmrs/react-root-decorator": "^1.0.0",
     "@reach/tabs": "^0.1.6",
     "@types/jest": "^24.0.18",
